--- a/index.html
+++ b/index.html
@@ -1,38 +1,17 @@
 <!DOCTYPE html>
-<html lang="ch">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="mineCNClogo.png" />
-    <title>噩梦科学实验室</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-        margin: 0;
-        padding: 20px;
-      }
-
-      label {
-        font-weight: bold;
-      }
-
-      input[type='text'] {
-        width: 100%;
-        padding: 10px;
-        margin-top: 5px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-      }
-    </style>
+    <title>Document</title>
   </head>
   <body>
     <div class="container">
-      <label for="username">用户名：</label>
-      <input type="text" id="username" name="username" />
+      <h1>Welcom</h1>
     </div>
 
-    <script></script>
+    <script src="main.js"></script>
   </body>
 </html>
