--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-s
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="mineCNClogo.png" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>My Public Website</h1>
+
+    <div id="box_module">
+      <div class="container">
+        <button id="yt">Youtube</button>
+        <button id="dc">Discord</button>
+        <p>Subscribe Me Thanks</p>
+      </div>
+    </div>
+
+    <script src="main.js"></script>
+  </body>
+</html>
