--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="mineCNClogo.png" />
-    <title>Document</title>
+    <title>| QuQ Web |</title>
   </head>
   <body>
-    <h1>My Public Website</h1>
-
-    <div id="box_module">
-      <div class="container">
-        <button id="yt">Youtube</button>
-        <button id="dc">Discord</button>
-        <p>Subscribe Me Thanks</p>
+    <div class="container">
+      <div id="PlayerCard">
+        <div id="menuButton">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <div id="drawer" class="hidden">
+          <ul class="horizontal-options">
+            <li><a href="shop.html">商场</a></li>
+            <li><a href="#">选项2</a></li>
+            <li><a href="#">选项3</a></li>
+          </ul>
+        </div>
       </div>
+      <p>&copy; 版权所有 - 私人网页</p>
     </div>
 
     <script src="main.js"></script>
