--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="icon" href="mineCNClogo.png" />
     <title>| QuQ Web |</title>
   </head>
@@ -26,6 +26,6 @@
       <p>&copy; 版权所有 - 私人网页</p>
     </div>
 
-    <script src="main.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
