--- a/index.html
+++ b/index.html
@@ -1,46 +1,182 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
     <link rel="icon" href="mineCNClogo.png" />
-    <title>| QuQ Web |</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>MineCNC School</title>
   </head>
+
   <body>
-    <div class="container">
-      <div id="PlayerCard">
-        <div id="menuButton">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
+    <nav>
+      <div class="nav-logo">
+        <a href="#">
+          <img src="logo.png" />
+        </a>
+      </div>
+
+      <ul class="nav-links">
+        <li class="link"><a href="#">首页</a></li>
+        <li id="link1" class="link"><a href="#">特点</a></li>
+        <li id="link2" class="link"><a href="#">定价</a></li>
+        <li id="link3" class="link"><a href="#">关于</a></li>
+      </ul>
+      <button class="btn">聘请我</button>
+    </nav>
+
+    <header class="container">
+      <div class="content">
+        <span class="blur"></span>
+        <span class="blur"></span>
+        <h4>像专业人士一样创建您的网站</h4>
+        <h1>嗨，我是<span>Reza</span>，Web开发者</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus rem eos aliquid quo rerum temporibus
+          ipsum distinctio numquam ut omnis placeat, nam sint atque quos dolorem laborum? Rerum, esse dolorem.
+        </p>
+        <button class="btn">开始吧</button>
+      </div>
+      <div class="image">
+        <img src="header.png" />
+      </div>
+    </header>
+
+    <section class="container">
+      <h2 class="header">我们的特点</h2>
+      <div class="features">
+        <div class="card">
+          <span><i class="ri-money-dollar-box-line"></i></span>
+          <h4>免费教程</h4>
+          <p>我在我的“AsmrProg”频道中的教程是免费的，您无需支付任何费用。</p>
+          <a href="#">现在加入 <i class="ri-arrow-right-line"></i></a>
         </div>
-        <div id="drawer" class="hidden">
-          <ul class="horizontal-options">
-            <li><a href="shop.html">商场</a></li>
-            <li><a href="#">选项2</a></li>
-            <li><a href="#">选项3</a></li>
-          </ul>
+        <div class="card">
+          <span><i class="ri-bug-line"></i></span>
+          <h4>解决您的问题</h4>
+          <p>您的代码有问题吗？告诉我，我会帮助您解决它。</p>
+          <a href="#">现在加入 <i class="ri-arrow-right-line"></i></a>
+        </div>
+        <div class="card">
+          <span><i class="ri-history-line"></i></span>
+          <h4>准时发布视频</h4>
+          <p>我们每隔4天发布一个视频，所以每4天检查一下频道以观看它！</p>
+          <a href="#">现在加入 <i class="ri-arrow-right-line"></i></a>
+        </div>
+        <div class="card">
+          <span><i class="ri-shake-hands-line"></i></span>
+          <h4>合作</h4>
+          <p>您想要一起工作吗？给我们写封电子邮件，我们会阅读它。</p>
+          <a href="#">现在加入 <i class="ri-arrow-right-line"></i></a>
         </div>
       </div>
-      <p>&copy; 版权所有 - 私人网页</p>
+    </section>
 
-      <br />
-      篮球之魂： 我的故事
-      大家好，我是[EvanChow]。生活中有很多事情能够塑造一个人，而篮球对我来说不仅仅是一项运动，它是我的激情、我的家庭传统，以及我的成就的源泉。
-      家庭背景：
-      我出生在一个充满热情和团结的家庭。我的父母一直是我的榜样。父亲是一名成功的企业家，而母亲则是一位教育家。他们教会了我坚韧、奉献和努力工作的价值观。家庭是我成长的摇篮，也是我信仰的堡垒。
-      篮球生涯：
-      我第一次触摸篮球时，还只是个小男孩。我记得那个时候，我站在家附近的球场上，尝试投篮，然后再次追逐篮球。从那一刻起，篮球成了我的挚爱。
-      我在中学时代开始了我的篮球生涯，加入了学校的篮球队。这是一个充满激情和竞争的时期。每天早上，我都会在黎明前前往球场，练习投篮和运球。我全身心地投入到这项运动中，每一场比赛都是一次挑战和成长的机会。
-      大学时，我获得了一份篮球奖学金，这让我更深入地探索了我的才华。我成为球队的核心成员，帮助我们取得了许多重要的胜利。更重要的是，篮球教给了我团队合作、领导力和坚韧的品质。
-      成就：
-      我的篮球生涯不仅仅是一段充满回忆的旅程，还带来了一系列成就。我获得了多个最有价值球员（MVP）奖项，带领我的球队赢得了几次冠军。这些荣誉不仅代表了我的个人努力，还代表了我们团队的团结和毅力。
-      除了篮球，我还在学业上取得了卓越的成绩。我毕业于一所著名的大学，获得了商业管理学位。这让我能够将我的领导和团队合作技能应用到职业生涯中。我现在是一家成功企业的高级经理，我相信篮球培养了我的领导力和决策能力，帮助我在职业领域取得成功。
-      结语：
-      篮球是我生活的一部分，它塑造了我成为今天的我。家庭背景、篮球生涯和成就是我人生旅程的重要组成部分。我相信，无论我们追求什么，热情、奉献和努力工作都是成功的关键。我期待着未来的挑战，因为它们将继续塑造我的故事。
-    </div>
+    <section class="container">
+      <h2 class="header">项目定价计划</h2>
+      <p class="sub-header">我们的定价计划包括各种会员级别，每个级别都针对不同的项目和代码类型定制。</p>
+      <div class="pricing">
+        <div class="card">
+          <div class="content">
+            <h4>基本计划</h4>
+            <h3>0美元</h3>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              智能编码计划
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              在家锻炼
+            </p>
+          </div>
+          <button class="btn">现在加入</button>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h4>黄金计划</h4>
+            <h3>10美元</h3>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              专业代码
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              智能编码计划
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              在家锻炼
+            </p>
+          </div>
+          <button class="btn">现在加入</button>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h4>钻石计划</h4>
+            <h3>100美元</h3>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              精英课程和课程
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              专业代码
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              个人指导
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              智能编码计划
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              在家锻炼
+            </p>
+          </div>
+          <button class="btn">现在加入</button>
+        </div>
+      </div>
+    </section>
 
-    <script src="index.js"></script>
+    <footer class="container">
+      <span class="blur"></span>
+      <span class="blur"></span>
+      <div class="column">
+        <div class="logo">
+          <img src="images/logo.png" />
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="socials">
+          <a href="#"><i class="ri-youtube-line"></i></a>
+          <a href="#"><i class="ri-instagram-line"></i></a>
+          <a href="#"><i class="ri-twitter-line"></i></a>
+        </div>
+      </div>
+      <div class="column">
+        <h4>公司</h4>
+        <a href="#">业务</a>
+        <a href="#">合作伙伴</a>
+        <a href="#">网络</a>
+      </div>
+      <div class="column">
+        <h4>关于我们</h4>
+        <a href="#">博客</a>
+        <a href="#">频道</a>
+        <a href="#">赞助商</a>
+      </div>
+      <div class="column">
+        <h4>联系方式</h4>
+        <a href="#">联系我们</a>
+        <a href="#">隐私政策</a>
+        <a href="#">条款和条件</a>
+      </div>
+    </footer>
+
+    <div class="copyright">版权所有 © 2023 MineCNC。保留所有权利。</div>
+
+    <script src="main.js"></script>
   </body>
 </html>
