--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <link rel="stylesheet" href="command.css" />
-    <title>MineCNC指令生成器</title>
+    <title>MineCNC指令编辑器</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
