--- a/index.html
+++ b/index.html
@@ -1,34 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="command.css" />
-    <title>MineCNC指令编辑器</title>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="logo.png" type="image/x-icon" />
+    <title>MineCNC 个人网页</title>
   </head>
   <body>
-    <header>
-      <img src="title.png" width="50%" />
-    </header>
-
-    <div class="title">
-      <h2>指令生成器</h2>
-      <div class="allcard">
-        <div class="card">
-          <a href="json_command_maker.html">
-            <img src="img/img0.png" class="cimg" />
-            <p>生成Json指令</p>
-          </a>
-        </div>
-        <div class="card">
-          <a href="give_command_maker.html">
-            <img src="img/img1.png" class="cimg" />
-            <p>生成Give指令</p>
-          </a>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <p>© 由MineCNC, 版权所有</p>
-    </footer>
+    hi
   </body>
 </html>
