--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>MineCNC 个人网页</title>
   </head>
   <body>
-    hi
+    <div class="container">
+      <img src="logo.png" />
+      <div class="content">
+        <h1>MineCNC</h1>
+        <a href="https://discord.gg/gj83xafAYy"><i class="fab fa-discord"></i> </a>
+        <a href="https://www.youtube.com/@programmer7761"><i class="fas fa-play"></i> </a>
+      </div>
+    </div>
   </body>
 </html>
