--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
         <a href="https://www.youtube.com/@programmer7761"><i class="fas fa-play"></i> </a>
       </div>
     </div>
+    <footer>
+      <p>版权所有 &copy; 2023 MineCNC</p>
+    </footer>
   </body>
 </html>
